feat: main layout & glass design effects

--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
 
 <body>
 
+    <main class="main main-content-wrap liquidGlass-wrapper">
+        <div class="main-content liquidGlass-effect liquidGlass-tint">
+            <div class="screen-aria">
+
+            </div>
+            <div class="keyboard-aria">
+
+            </div>
+        </div>
+    </main>
+
 <script src="./js/script.js"></script>
 
 </body>
