--- a/index.html
+++ b/index.html
@@ -19,11 +19,15 @@
 
     <main class="main main-content-wrap liquidGlass-wrapper">
         <div class="main-content liquidGlass-effect liquidGlass-tint">
-            <div class="screen-aria">
+            <div class="screen-aria-wrap liquidGlass-wrapper">
+                <div class="screen-aria liquidGlass-shine">
 
+                </div>
             </div>
-            <div class="keyboard-aria">
+            <div class="keyboard-aria-wrap">
+                <div class="keyboard-aria">
 
+                </div>
             </div>
         </div>
     </main>
