fix: optimized styles

--- a/index.html
+++ b/index.html
@@ -18,17 +18,20 @@
 <body>
 
     <main class="main main-content-wrap liquidGlass-wrapper">
-        <div class="main-content liquidGlass-effect liquidGlass-tint">
+        <div class="main-content inner-wrap liquidGlass-effect liquidGlass-tint">
+
             <div class="screen-aria-wrap liquidGlass-wrapper">
-                <div class="screen-aria liquidGlass-shine">
+                <div class="screen-aria inner-wrap liquidGlass-shine">
 
                 </div>
             </div>
+
             <div class="keyboard-aria-wrap">
-                <div class="keyboard-aria">
+                <div class="keyboard-aria inner-wrap">
 
                 </div>
             </div>
+
         </div>
     </main>
 
