--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="TE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Stas Ganiev: portfolio</title>
+  <title>Stas Ganiev: calculator</title>
   <meta name="keywords" content="stas ganiev, benony, ganiev.pro, 1c developer, web developer">
   <meta name="description" content="Stas ganiev portfolio: calculator">
 
@@ -22,6 +22,8 @@
 
             <div class="screen-aria-wrap liquidGlass-wrapper">
                 <div class="screen-aria inner-wrap liquidGlass-shine">
+
+                    <input class="main-display liquidGlass-effect liquidGlass-tint" type="text" id="main-display-input" name="main-display-input" value="" placeholder="99.99">
 
                 </div>
             </div>
