feat: base keyboart layout

--- a/index.html
+++ b/index.html
@@ -31,6 +31,31 @@
             <div class="keyboard-aria-wrap">
                 <div class="keyboard-aria inner-wrap">
 
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" type="button" alt="9">mc</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" type="button" alt="9">mr</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" type="button" alt="9">m-</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" type="button" alt="9">m+</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" type="button" alt="9">C</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" type="button" alt="9">V</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" type="button" alt="9">%</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" type="button" alt="9">:</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" type="button" alt="9">7</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" type="button" alt="9">8</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" type="button" alt="9">9</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" type="button" alt="9">X</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" type="button" alt="9">4</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" type="button" alt="9">5</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" type="button" alt="9">6</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" type="button" alt="9">-</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" type="button" alt="9">1</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" type="button" alt="9">2</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" type="button" alt="9">3</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" type="button" alt="9">+</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" type="button" alt="9">+/-</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" type="button" alt="9">0</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" type="button" alt="9">.</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" type="button" alt="9">=</button></div>
+
                 </div>
             </div>
 
