--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="screen-aria-wrap liquidGlass-wrapper">
                 <div class="screen-aria inner-wrap liquidGlass-shine">
 
-                    <input class="main-display liquidGlass-effect liquidGlass-tint" type="text" id="main-display-input" name="main-display-input" value="" placeholder="99.99">
+                    <input class="main-display liquidGlass-effect liquidGlass-tint" type="text" id="main-display-input" name="main-display-input" value="" placeholder="0">
 
                 </div>
             </div>
@@ -31,30 +31,30 @@
             <div class="keyboard-aria-wrap">
                 <div class="keyboard-aria inner-wrap">
 
-                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" type="button" alt="9">mc</button></div>
-                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" type="button" alt="9">mr</button></div>
-                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" type="button" alt="9">m-</button></div>
-                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" type="button" alt="9">m+</button></div>
-                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" type="button" alt="9">C</button></div>
-                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" type="button" alt="9">V</button></div>
-                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" type="button" alt="9">%</button></div>
-                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" type="button" alt="9">:</button></div>
-                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" type="button" alt="9">7</button></div>
-                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" type="button" alt="9">8</button></div>
-                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" type="button" alt="9">9</button></div>
-                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" type="button" alt="9">X</button></div>
-                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" type="button" alt="9">4</button></div>
-                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" type="button" alt="9">5</button></div>
-                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" type="button" alt="9">6</button></div>
-                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" type="button" alt="9">-</button></div>
-                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" type="button" alt="9">1</button></div>
-                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" type="button" alt="9">2</button></div>
-                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" type="button" alt="9">3</button></div>
-                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" type="button" alt="9">+</button></div>
-                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" type="button" alt="9">+/-</button></div>
-                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" type="button" alt="9">0</button></div>
-                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" type="button" alt="9">.</button></div>
-                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" type="button" alt="9">=</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='mc' type="button" alt="9">mc</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='mr' type="button" alt="9">mr</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='madd' type="button" alt="9">m-</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='msub' type="button" alt="9">m+</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='clear' type="button" alt="9">C</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='sqrt' type="button" alt="9">V</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='persent' type="button" alt="9">%</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='div' type="button" alt="9">:</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='7' type="button" alt="9">7</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='8' type="button" alt="9">8</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='9' type="button" alt="9">9</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='mul' type="button" alt="9">X</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='4' type="button" alt="9">4</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='5' type="button" alt="9">5</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='6' type="button" alt="9">6</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='sub' type="button" alt="9">-</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='1' type="button" alt="9">1</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='2' type="button" alt="9">2</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='3' type="button" alt="9">3</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='add' type="button" alt="9">+</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='sign' type="button" alt="9">+/-</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='0' type="button" alt="9">0</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='dot' type="button" alt="9">.</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='done' type="button" alt="9">=</button></div>
 
                 </div>
             </div>
