--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
                 <div class="screen-aria inner-wrap liquidGlass-shine">
 
                     <input class="main-display liquidGlass-effect liquidGlass-tint" type="text" id="main-display-input" name="main-display-input" value="" placeholder="0">
+                    <div class="keys-clear-wrap">
+                        <div class="key-wrap liquidGlass-wrapper">
+                            <button class="key key-backspace-js inner-wrap btn liquidGlass-effect liquidGlass-tint" data-key-code='clear-char' type="button" alt="x">x</button>
+                        </div>
+                        <div class="key-wrap liquidGlass-wrapper">
+                            <button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint" data-key-code='clear-current' type="button" alt="ca">ca</button>
+                        </div>
+                    </div>
 
                 </div>
             </div>
@@ -31,30 +39,30 @@
             <div class="keyboard-aria-wrap">
                 <div class="keyboard-aria inner-wrap">
 
-                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='mc' type="button" alt="9">mc</button></div>
-                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='mr' type="button" alt="9">mr</button></div>
-                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='madd' type="button" alt="9">m-</button></div>
-                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='msub' type="button" alt="9">m+</button></div>
-                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='clear' type="button" alt="9">C</button></div>
-                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='sqrt' type="button" alt="9">V</button></div>
-                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='persent' type="button" alt="9">%</button></div>
-                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='div' type="button" alt="9">:</button></div>
-                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='7' type="button" alt="9">7</button></div>
-                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='8' type="button" alt="9">8</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='mc' type="button" alt="mc">mc</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='mr' type="button" alt="mr">mr</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='madd' type="button" alt="m-">m-</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='msub' type="button" alt="m+">m+</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='clear' type="button" alt="c">C</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='sqrt' type="button" alt="sq">V</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='persent' type="button" alt="%">%</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='div' type="button" alt="div">:</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='7' type="button" alt="7">7</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='8' type="button" alt="8">8</button></div>
                     <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='9' type="button" alt="9">9</button></div>
-                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='mul' type="button" alt="9">X</button></div>
-                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='4' type="button" alt="9">4</button></div>
-                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='5' type="button" alt="9">5</button></div>
-                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='6' type="button" alt="9">6</button></div>
-                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='sub' type="button" alt="9">-</button></div>
-                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='1' type="button" alt="9">1</button></div>
-                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='2' type="button" alt="9">2</button></div>
-                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='3' type="button" alt="9">3</button></div>
-                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='add' type="button" alt="9">+</button></div>
-                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='sign' type="button" alt="9">+/-</button></div>
-                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='0' type="button" alt="9">0</button></div>
-                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='dot' type="button" alt="9">.</button></div>
-                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='done' type="button" alt="9">=</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='mul' type="button" alt="mul">X</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='4' type="button" alt="4">4</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='5' type="button" alt="5">5</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='6' type="button" alt="6">6</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='sub' type="button" alt="sub">-</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='1' type="button" alt="1">1</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='2' type="button" alt="2">2</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='3' type="button" alt="3">3</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='add' type="button" alt="add">+</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='sign' type="button" alt="sign">+/-</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='0' type="button" alt="zero">0</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='dot' type="button" alt="dot">.</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='done' type="button" alt="done">=</button></div>
 
                 </div>
             </div>
