feat: Memory operations

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <div class="screen-aria inner-wrap liquidGlass-shine">
 
                     <input class="main-display liquidGlass-effect liquidGlass-tint" type="text" id="main-display-input" name="main-display-input" value="" placeholder="0">
+                    <p class="memory-display">m: <span class="memory-display-content">99.00</span></p>
                     <div class="keys-clear-wrap">
                         <div class="key-wrap liquidGlass-wrapper">
                             <button class="key key-backspace-js inner-wrap btn liquidGlass-effect liquidGlass-tint" data-key-code='clear-char' type="button" alt="x">x</button>
@@ -41,8 +42,8 @@
 
                     <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='mc' type="button" alt="mc">mc</button></div>
                     <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='mr' type="button" alt="mr">mr</button></div>
-                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='madd' type="button" alt="m-">m-</button></div>
-                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='msub' type="button" alt="m+">m+</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='madd' type="button" alt="m+">m+</button></div>
+                    <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='msub' type="button" alt="m-">m-</button></div>
                     <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='clear' type="button" alt="c">C</button></div>
                     <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='sqrt' type="button" alt="sq">V</button></div>
                     <div class="key-wrap liquidGlass-wrapper"><button class="key inner-wrap btn liquidGlass-effect liquidGlass-tint liquidGlass-shine" data-key-code='persent' type="button" alt="%">%</button></div>
