feat: Changed font

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <link href="./css/normolize.css" rel="stylesheet">
   <link href="./css/style.css" rel="stylesheet">
   <!-- <link href="./css/outlines.css" rel="stylesheet"> -->
-  <!-- <link rel="preload" href="fonts/AmaticSC-Regular.woff" as="font" crossorigin="anonymous"> -->
+  <link rel="preload" href="./fonts/lekton-regular-webfont.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="./fonts/lekton-regular-webfont.woff" as="font" crossorigin="anonymous">
   <link rel="shortcut icon" type="image/x-icon" href="./img/logo16.png">
 </head>
 
